[tool.poetry]
name = "netpalm-client"
version = "1.0.1"
description = "Simple Client for accessing a Netpalm Service"
authors = ["Will George <wrgeorge1983@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
